<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="io.github.akueisara.buildasinglescreenapp.MainActivity">

        <ImageView
            android:id="@+id/image_view_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/picture_of_the_restaurant"
            android:scaleType="centerInside"
            android:src="@drawable/imageview_restaurant" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_restaurant"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/restaurant_name"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_name"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_address"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icon_address"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/address" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icon_phone"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/phone_number" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/description" />


    </RelativeLayout>

</ScrollView>
